--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 </head>
 
 <body>
-  <button class="start-button">Start project</button>
+  <main>
+    <button class="start-button">Start project</button>
+    <ul class="directions-list">
+
+    </ul>
+  </main>
   <script src="./script/script.js"></script>
 </body>
 
