--- a/index.html
+++ b/index.html
@@ -6,15 +6,33 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="/styles/normalize.css">
   <link rel="stylesheet" href="./styles/style.css">
 </head>
 
 <body>
-  <main>
-    <button class="start-button">Start project</button>
-    <ul class="directions-list">
+  <main class="main-section">
+    <div class="container">
+      <h1 class="main-title">Дирекції</h1>
+      <form class="main-form">
+        <div class="group-year">
+          <label class="label-count-year" for="count-year">Кількість років</label>
+          <input class="input-count-year" type="number" name="count-year" id="count-year">
+        </div>
+        <button class="calc-button" type="submit">
+          <span class="calc-span">Розрахувати</span>
+        </button>
 
-    </ul>
+      </form>
+      <ul class="directions-list">
+
+      </ul>
+    </div>
   </main>
   <script src="./script/script.js"></script>
 </body>
