add: styles date
add: styles date

--- a/index.html
+++ b/index.html
@@ -24,6 +24,62 @@
           <label class="label-count-year" for="count-year">Кількість років</label>
           <input class="input-count-year" type="number" name="count-year" id="count-year">
         </div>
+        <ul class="planet-list">
+          <li>
+            <div>
+              <label class="planet-label" for="aspect-sun">Сонце</label>
+              <select class="select-zn-zodiak" id="aspect-sun" name="aspect-sun">
+                <option value="1">Овен</option>
+                <option value="2">Тілець</option>
+                <option value="3">Близнюки</option>
+                <option value="4">Рак</option>
+                <option value="5">Лев</option>
+                <option value="6">Діва</option>
+                <option value="7">Терези</option>
+                <option value="8">Скорпіон</option>
+                <option value="9">Стрілець</option>
+                <option value="10">Козеріг</option>
+                <option value="11">Водолій</option>
+                <option value="12">Риби</option>
+              </select>
+            </div>
+            <div>
+              <label for="aspect-degr-sun">Градуси</label>
+              <input type="number" name="aspect-degr-sun" id="aspect-degr-sun">
+            </div>
+            <div>
+              <label for="aspect-hours-sun">Години</label>
+              <input type="number" name="aspect-hours-sun" id="aspect-hours-sun">
+            </div>
+          </li>
+          <li>
+            <div>
+              <label class="planet-label" for="aspect-moon">Місяць</label>
+              <select class="select-zn-zodiak" id="aspect-moon" name="aspect-moon">
+                <option value="1">Овен</option>
+                <option value="2">Тілець</option>
+                <option value="3">Близнюки</option>
+                <option value="4">Рак</option>
+                <option value="5">Лев</option>
+                <option value="6">Діва</option>
+                <option value="7">Терези</option>
+                <option value="8">Скорпіон</option>
+                <option value="9">Стрілець</option>
+                <option value="10">Козеріг</option>
+                <option value="11">Водолій</option>
+                <option value="12">Риби</option>
+              </select>
+            </div>
+            <div>
+              <label for="aspect-degr-moon">Градуси</label>
+              <input type="number" name="aspect-degr-moon" id="aspect-degr-moon">
+            </div>
+            <div>
+              <label for="aspect-hours-moon">Години</label>
+              <input type="number" name="aspect-hours-moon" id="aspect-hours-moon">
+            </div>
+          </li>
+        </ul>
         <button class="calc-button" type="submit">
           <span class="calc-span">Розрахувати</span>
         </button>
