--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
           <input class="input-count-year" type="number" name="count-year" id="count-year">
         </div>
         <ul class="planet-list">
-          <li>
-            <div>
+          <li class="planet-item">
+            <div class="group-planet">
               <label class="planet-label" for="aspect-sun">Сонце</label>
               <select class="select-zn-zodiak" id="aspect-sun" name="aspect-sun">
                 <option value="1">Овен</option>
@@ -43,17 +43,17 @@
                 <option value="12">Риби</option>
               </select>
             </div>
-            <div>
-              <label for="aspect-degr-sun">Градуси</label>
-              <input type="number" name="aspect-degr-sun" id="aspect-degr-sun">
+            <div class="group-degr">
+              <label class="degr-label" for="aspect-degr-sun">Градуси</label>
+              <input class="degr-input" type="number" name="aspect-degr-sun" id="aspect-degr-sun">
             </div>
-            <div>
-              <label for="aspect-hours-sun">Години</label>
-              <input type="number" name="aspect-hours-sun" id="aspect-hours-sun">
+            <div class="group-hours">
+              <label class="label-hours" for="aspect-hours-sun">Години</label>
+              <input class="input-hours" type="number" name="aspect-hours-sun" id="aspect-hours-sun">
             </div>
           </li>
-          <li>
-            <div>
+          <li class="planet-item">
+            <div class="group-planet">
               <label class="planet-label" for="aspect-moon">Місяць</label>
               <select class="select-zn-zodiak" id="aspect-moon" name="aspect-moon">
                 <option value="1">Овен</option>
@@ -70,13 +70,13 @@
                 <option value="12">Риби</option>
               </select>
             </div>
-            <div>
-              <label for="aspect-degr-moon">Градуси</label>
-              <input type="number" name="aspect-degr-moon" id="aspect-degr-moon">
+            <div class="group-degr">
+              <label class="degr-label" for="aspect-degr-moon">Градуси</label>
+              <input class="degr-input" type="number" name="aspect-degr-moon" id="aspect-degr-moon">
             </div>
-            <div>
-              <label for="aspect-hours-moon">Години</label>
-              <input type="number" name="aspect-hours-moon" id="aspect-hours-moon">
+            <div class="group-hours">
+              <label class="label-hours" for="aspect-hours-moon">Години</label>
+              <input class="input-hours" type="number" name="aspect-hours-moon" id="aspect-hours-moon">
             </div>
           </li>
         </ul>
