add: markup data list
add: markup data list

--- a/index.html
+++ b/index.html
@@ -626,7 +626,24 @@
 
       </form>
       <ul class="directions-list">
-
+        <li class="directions-item">
+          <h2 class="planet-one-title"></h2>
+          <ul class="aspects-list">
+            <li class="aspects-item">
+              <h3 class="aspect-title"></h3>
+              <ul class="planet-two-list">
+                <li class="planet-two-item">
+                  <h4 class="planet-two-title"></h4>
+                  <ul class="period-list">
+                    <li class="period-item">
+                      <p class="aspects-period"></p>
+                    </li>
+                  </ul>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </li>
       </ul>
     </div>
   </main>
