add: alert date
add: alert date

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
     <div class="container">
       <h1 class="main-title">Дирекції</h1>
       <form class="main-form">
+        <div class="group-datebd">
+          <label for="date-bd">Дата народження</label>
+          <input type="date" name="date-bd" id="date-bd">
+        </div>
         <div class="group-year">
           <label class="label-count-year" for="count-year">Кількість років</label>
           <input class="input-count-year" type="number" name="count-year" id="count-year">
