--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
           <label for="date-bd">Дата народження</label>
           <input type="date" name="date-bd" id="date-bd">
         </div>
+        <div class="group-dateevent">
+          <label for="date-event">Дата події</label>
+          <input type="date" name="date-event" id="date-event">
+        </div>
         <div class="group-year">
           <label class="label-count-year" for="count-year">Кількість років</label>
           <input class="input-count-year" type="number" name="count-year" id="count-year">
