--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
     <div class="container">
       <h1 class="main-title">Дирекції</h1>
       <form class="main-form">
-        <div class="group-datebd">
-          <label for="date-bd">Дата народження</label>
-          <input type="date" name="date-bd" id="date-bd">
+        <div class="group-year">
+          <label class="label-count-year" for="date-bd">Дата народження</label>
+          <input class="input-date" type="date" name="date-bd" id="date-bd">
         </div>
-        <div class="group-dateevent">
-          <label for="date-event">Дата події</label>
-          <input type="date" name="date-event" id="date-event">
+        <div class="group-year">
+          <label class="label-count-year" for="date-event">Дата події</label>
+          <input class="input-date" type="date" name="date-event" id="date-event">
         </div>
         <div class="group-year">
           <label class="label-count-year" for="count-year">Кількість років</label>
