add: new planet
add: new planet

--- a/index.html
+++ b/index.html
@@ -627,6 +627,60 @@
               <input class="input-hours" type="number" name="aspect-hours-housetwelve" id="aspect-hours-housetwelve">
             </div>
           </li>
+          <li class="planet-item">
+            <div class="group-planet">
+              <label class="planet-label" for="aspect-lilit">Ліліт</label>
+              <select class="select-zn-zodiak" id="aspect-lilit" name="aspect-lilit">
+                <option value="1">Овен</option>
+                <option value="2">Тілець</option>
+                <option value="3">Близнюки</option>
+                <option value="4">Рак</option>
+                <option value="5">Лев</option>
+                <option value="6">Діва</option>
+                <option value="7">Терези</option>
+                <option value="8">Скорпіон</option>
+                <option value="9">Стрілець</option>
+                <option value="10">Козеріг</option>
+                <option value="11">Водолій</option>
+                <option value="12">Риби</option>
+              </select>
+            </div>
+            <div class="group-degr">
+              <label class="degr-label" for="aspect-degr-lilit">Градуси</label>
+              <input class="degr-input" type="number" name="aspect-degr-lilit" id="aspect-degr-lilit">
+            </div>
+            <div class="group-hours">
+              <label class="label-hours" for="aspect-hours-lilit">Години</label>
+              <input class="input-hours" type="number" name="aspect-hours-lilit" id="aspect-hours-lilit">
+            </div>
+          </li>
+          <li class="planet-item">
+            <div class="group-planet">
+              <label class="planet-label" for="aspect-node">Вузол</label>
+              <select class="select-zn-zodiak" id="aspect-node" name="aspect-node">
+                <option value="1">Овен</option>
+                <option value="2">Тілець</option>
+                <option value="3">Близнюки</option>
+                <option value="4">Рак</option>
+                <option value="5">Лев</option>
+                <option value="6">Діва</option>
+                <option value="7">Терези</option>
+                <option value="8">Скорпіон</option>
+                <option value="9">Стрілець</option>
+                <option value="10">Козеріг</option>
+                <option value="11">Водолій</option>
+                <option value="12">Риби</option>
+              </select>
+            </div>
+            <div class="group-degr">
+              <label class="degr-label" for="aspect-degr-node">Градуси</label>
+              <input class="degr-input" type="number" name="aspect-degr-node" id="aspect-degr-node">
+            </div>
+            <div class="group-hours">
+              <label class="label-hours" for="aspect-hours-node">Години</label>
+              <input class="input-hours" type="number" name="aspect-hours-node" id="aspect-hours-node">
+            </div>
+          </li>
         </ul>
         <button class="calc-button" type="submit">
           <span class="calc-span">Розрахувати</span>
