add: render tau
add: render tau

--- a/index.html
+++ b/index.html
@@ -707,6 +707,12 @@
           </ul>
         </li>
       </ul>
+      <h2 class="title-tau"></h2>
+      <ul class="tau-kvadrat-list">
+        <li class="tau-kvadrat-item">
+          <p class="tau-kvadrat-paragh"></p>
+        </li>
+      </ul>
     </div>
   </main>
   <script src="./script/script.js"></script>
