add: bisekstil done
add: bisekstil done

--- a/index.html
+++ b/index.html
@@ -713,6 +713,12 @@
           <p class="tau-kvadrat-paragh"></p>
         </li>
       </ul>
+      <h2 class="title-bisekstil"></h2>
+      <ul class="bisekstil-list">
+        <li class="bisekstil-item">
+          <p class="bisekstil-paragh"></p>
+        </li>
+      </ul>
     </div>
   </main>
   <script src="./script/script.js"></script>
