add: big trigon done
add: big trigon done

--- a/index.html
+++ b/index.html
@@ -719,6 +719,12 @@
           <p class="bisekstil-paragh"></p>
         </li>
       </ul>
+      <h2 class="title-bigtrigon"></h2>
+      <ul class="bigtrigon-list">
+        <li class="bigtrigon-item">
+          <p class="bigtrigon-paragh"></p>
+        </li>
+      </ul>
     </div>
   </main>
   <script src="./script/script.js"></script>
