--- a/index.html
+++ b/index.html
@@ -725,6 +725,12 @@
           <p class="bigtrigon-paragh"></p>
         </li>
       </ul>
+      <h2 class="title-obiquesail"></h2>
+      <ul class="obiquesail-list">
+        <li class="obiquesail-item">
+          <p class="obiquesail-paragh"></p>
+        </li>
+      </ul>
     </div>
   </main>
   <script src="./script/script.js"></script>
