--- a/index.html
+++ b/index.html
@@ -731,6 +731,12 @@
           <p class="obiquesail-paragh"></p>
         </li>
       </ul>
+      <h2 class="title-cart"></h2>
+      <ul class="cart-list">
+        <li class="cart-item">
+          <p class="cart-paragh"></p>
+        </li>
+      </ul>
     </div>
   </main>
   <script src="./script/script.js"></script>
