--- a/index.html
+++ b/index.html
@@ -737,6 +737,12 @@
           <p class="cart-paragh"></p>
         </li>
       </ul>
+      <h2 class="title-bigsquare"></h2>
+      <ul class="bigsquare-list">
+        <li class="bigsquare-item">
+          <p class="bigsquare-paragh"></p>
+        </li>
+      </ul>
     </div>
   </main>
   <script src="./script/script.js"></script>
