--- a/index.html
+++ b/index.html
@@ -743,6 +743,12 @@
           <p class="bigsquare-paragh"></p>
         </li>
       </ul>
+      <h2 class="title-trapecia"></h2>
+      <ul class="trapecia-list">
+        <li class="trapecia-item">
+          <p class="trapecia-paragh"></p>
+        </li>
+      </ul>
     </div>
   </main>
   <script src="./script/script.js"></script>
