--- a/index.html
+++ b/index.html
@@ -749,6 +749,12 @@
           <p class="trapecia-paragh"></p>
         </li>
       </ul>
+      <h2 class="title-sail"></h2>
+      <ul class="sail-list">
+        <li class="sail-item">
+          <p class="sail-paragh"></p>
+        </li>
+      </ul>
     </div>
   </main>
   <script src="./script/script.js"></script>
