add: group fill date by id
add: group fill date by id

--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
           <label class="label-count-year" for="count-year">Кількість років</label>
           <input class="input-count-year" type="number" name="count-year" id="count-year">
         </div>
+        <div class="group-year group-fill-id">
+          <label class="label-count-year" for="id-input">ID:</label>
+          <input class="input-count-year input-id" type="text" name="id-input" id="id-input">
+          <button class="button-id-fill">Заповнити по ID</button>
+        </div>
         <ul class="planet-list">
           <li class="planet-item">
             <div class="group-planet">
