add: processing fill date
add: processing fill date

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         </div>
         <div class="group-year group-fill-id">
           <label class="label-count-year" for="id-input">ID:</label>
-          <input class="input-count-year input-id" type="text" name="id-input" id="id-input">
-          <button class="button-id-fill">Заповнити по ID</button>
+          <input class="input-count-year input-id" type="text" autocomplete="off" id="id-input">
+          <button class="button-id-fill" type="submit">Заповнити по ID</button>
         </div>
         <ul class="planet-list">
           <li class="planet-item">
